--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,11 @@ button:hover {
     background-color: #0056b3;
 }
 
+.container__buttons button {
+    flex: 1;
+    margin-right: 10px;
+}
+
 .lamp {
     padding: 10px;
     background-color: #444;
@@ -65,10 +70,12 @@ button:hover {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    padding: 5px 10px;
 }
 
-#sort:hover,
-#search:hover {
+#search {
+    background-color: black;
+}
+
+#sort:hover {
     background-color: #0056b3;
 }
