--- a/src/components/Section2/section2.css
+++ b/src/components/Section2/section2.css
@@ -1,29 +1,34 @@
 .section2 {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 90px;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 30px;
 }
 
 .section2-column1,
 .section2-column2,
 .section2-column3 {
-  align-items: center;
   text-align: center;
+  padding: 20px;
 }
 
 .section2-image {
-  margin-bottom: 30px;
-}
-
-.section2-text-title,
-.section2-text-pharagraph {
-    width: 260px;
+  margin-bottom: 20px;
 }
 
 .section2-text-title {
-    margin-bottom: 10px;
+  font-size: 24px;
+  margin: 10px 0;
+  color: #333;
 }
 
-.section2-text-pharagraph {
-    color: #7A7A7A;
+.section2-text-paragraph {
+  color: #7A7A7A;
+  font-size: 18px;
+}
+
+.section2-column1:hover,
+.section2-column2:hover,
+.section2-column3:hover {
+  background-color: #f5f5f5;
+  transition: background-color 0.3s ease;
 }
