--- a/src/components/Section1/section1.css
+++ b/src/components/Section1/section1.css
@@ -5,8 +5,7 @@
 }
 
 .section1-image {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 0 30px;
 }
 
 .section1-text {
@@ -16,14 +15,12 @@
 
 .section1-text-title {
     font-size: 35px;
-    margin-top: 0;
-    margin-bottom: 15px;
+    margin: 0 0 15px;
     color: #333;
 }
 
 .section1-text-paragraph {
     font-size: 28px;
     color: #7A7A7A;
-    margin-top: 50px;
-    margin-right: 30px;
+    margin: 50px 30px 0 0;
 }
