--- a/src/components/Catalog/catalog.css
+++ b/src/components/Catalog/catalog.css
@@ -3,12 +3,13 @@
   flex-wrap: nowrap;
   overflow-x: auto;
   padding: 20px;
-  background-color: #f8f8f8;
+  margin-bottom: 100px;
+  justify-content: space-between
 }
 
 .lamp {
   margin: 15px;
-  padding: 20px;
+  padding: 40px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -30,4 +31,20 @@
 .lamp p {
   color: #666666;
   font-size: 16px;
+  margin-bottom: 30px;
+}
+
+.lamp-link {
+  background-color: #7A7A7A;
+  color: #fff;
+  font-size: 1rem;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 8px;
+  text-decoration: none;
+}
+
+.lamp-link:hover {
+  background-color: #625f5f;
 }
