--- a/src/components/CatalogFilter/CatalogFilter.css
+++ b/src/components/CatalogFilter/CatalogFilter.css
@@ -1,11 +1,13 @@
 .wrapper {
   border-radius: 12px;
-  max-width: 97%;
 }
 
 .inner {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 1.4vw 0;
+  margin-right: 35px;
 }
 
 .selectSort {
@@ -15,12 +17,13 @@
   border-radius: 5px;
   padding: 5px;
   font-size: 14px;
+  margin-left: 30px;
 }
 
 .myLabel {
-  display: flex;
   flex-direction: column;
   margin-right: 10px;
+  margin-left: 50px;
 }
 
 .myLabel input {
@@ -40,6 +43,7 @@
   background-color: #4CAF50;
   color: white;
   cursor: pointer;
+  margin-left: auto;
 }
 
 .myButton span {
