--- a/src/components/CatalogFilter/CatalogFilter.css
+++ b/src/components/CatalogFilter/CatalogFilter.css
@@ -1,12 +1,12 @@
 .wrapper {
   border-radius: 12px;
+  margin-bottom: 30px;
 }
 
 .inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1.4vw 0;
   margin-right: 35px;
 }
 
@@ -40,11 +40,12 @@
   height: 35px;
   border: none;
   border-radius: 5px;
-  background-color: #4CAF50;
+  background-color: #82BBB5;
   color: white;
   cursor: pointer;
   margin-left: auto;
 }
+
 
 .myButton span {
   font-size: 14px;
