--- a/src/components/CatalogFilter/CatalogFilter.css
+++ b/src/components/CatalogFilter/CatalogFilter.css
@@ -36,15 +36,32 @@
 }
 
 .myButton {
-  width: 100px;
-  height: 35px;
+  width: 120px;
+  height: 45px;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: #82BBB5;
   color: white;
   cursor: pointer;
   margin-left: auto;
+  font-size: 16px;
+  padding: 10px 20px;
+  transition: all 0.3s ease 0s;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
+
+.myButton:hover {
+  background-color: #68a89a; 
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+}
+
 
 
 .myButton span {
