--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -44,9 +44,24 @@
     width: 200px;
     height: 35px;
     border: none;
-    border-radius: 5px;
-    padding: 5px;
     font-size: 14px;
     margin-right: 35px;
     outline: 1px solid #82BBB5;
+    appearance: none;
+    border: 2px solid #000;
+    border-radius: 15px;
+    box-sizing: border-box;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: normal;
+    padding: 15px 30px;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    will-change: transform;
 }
