--- a/src/components/LampDetail/lampDetail.css
+++ b/src/components/LampDetail/lampDetail.css
@@ -83,3 +83,23 @@
   color: #fff;
   background-color: #000;
 }
+
+.characteristic-btn {
+  padding: 10px 20px;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  margin-right: 30px;
+  font-weight: bold;
+}
+
+.blue {
+  background-color: #007bff;
+  color: white;
+}
+
+.black {
+  background-color: #000;
+  color: white;
+}
