--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -1,24 +1,51 @@
-.cart-container {
-    padding: 20px;
-  }
-  
-  .cart-items {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .cart-item {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .cart-item img {
-    margin-right: 10px;
-  }
-  
-  .item-details {
-    display: flex;
-    flex-direction: column;
-  }
-  
+.cart {
+  width: 100%;
+  padding: 20px;
+}
+
+.cart h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.cart ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.cart li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
+  width: 200px;
+}
+
+.cart img {
+  margin-right: 20px;
+}
+
+.cart div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cart button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #007BFF;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.cart button:hover {
+  background-color: #0056b3;
+}
