--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -29,7 +29,7 @@
   margin-top: 10px;
 }
 
-.cart button {
+.item-details button {
   margin-top: 10px;
   padding: 10px 20px;
   background-color: #007BFF;
@@ -45,5 +45,5 @@
 
 .cart-buttons {
   display: flex;
-  
+  justify-content: space-between;
 }
