--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -4,6 +4,7 @@
   align-items: center;
   font-size: 18px;
   padding: 20px;
+  margin-bottom: 200px;
 }
 
 .cart-items {
@@ -17,10 +18,11 @@
 .cart-item {
   display: flex;
   align-items: center;
-  margin: 20px;
   border: 1px solid #000000;
   padding: 20px;
   width: 100%;
+  font-size: 40px;
+  font-weight: bold; 
 }
 
 .item-details {
@@ -43,7 +45,56 @@
   background-color: #0056b3;
 }
 
+.cart-total {
+  padding: 20px;
+  border-radius: 5px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 20px;
+}
+
+.cart-total p {
+  font-size: 30px;
+  font-weight: bold;
+}
+
 .cart-buttons {
   display: flex;
   justify-content: space-between;
+  margin-top: 100px;
+}
+
+.cart-buttons button {
+  appearance: none;
+  border: 2px solid #000;
+  border-radius: 15px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: normal;
+  padding: 15px 30px;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.cart-buttons button:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.cart-buttons button:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
+.cart-buttons button:last-child {
+  margin-left: auto;
 }
