--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -19,7 +19,6 @@
   display: flex;
   align-items: center;
   border: 1px solid #000000;
-  padding: 20px;
   width: 100%;
   font-size: 40px;
   font-weight: bold; 
@@ -28,21 +27,30 @@
 .item-details {
   display: flex;
   align-items: center;
-  margin-top: 10px;
 }
 
 .item-details button {
-  margin-top: 10px;
-  padding: 10px 20px;
-  background-color: #007BFF;
-  color: white;
-  border: none;
+  appearance: none;
+  border: 2px solid #000;
+  border-radius: 15px;
+  box-sizing: border-box;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 40px;
+  font-weight: 600;
+  line-height: normal;
+  padding: 5px 17px;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
 }
 
 .cart button:hover {
-  background-color: #0056b3;
+  background-color: #76808d;
 }
 
 .cart-total {
@@ -85,16 +93,29 @@
   will-change: transform;
 }
 
-.cart-buttons button:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-  transform: translateY(-2px);
+.cart-buttons-2 button {
+  margin-right: 20px;
 }
 
-.cart-buttons button:active {
-  box-shadow: none;
-  transform: translateY(0);
+
+.cart-buttons-last-button {
+  margin-left: 1300px;
 }
 
-.cart-buttons button:last-child {
-  margin-left: auto;
+.cart-item-price {
+  margin-left: 510px;
+}
+
+.cart-item-name {
+  margin-left: 100px;
+  margin-right: 600px;
+}
+
+.cart-item-image {
+  margin-left: 20px;
+}
+
+.cart-item-quantity {
+  margin-left: 20px;
+  margin-right: 20px;
 }
