--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -21,7 +21,8 @@
   border: 1px solid #000000;
   width: 100%;
   font-size: 40px;
-  font-weight: bold; 
+  font-weight: bold;
+  margin-bottom: 30px;
 }
 
 .item-details {
