--- a/src/components/FormikPage/formikPage.css
+++ b/src/components/FormikPage/formikPage.css
@@ -24,12 +24,20 @@
   justify-content: space-between;
 }
 
+.checkout {
+  display: block;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 70px;
+  font-size: 30px;
+}
+
 label {
   display: block;
   font-weight: bold;
   margin-top: 15px;
+  margin-bottom: 10px;
   text-align: center;
-
 }
 
 input[type="text"],
@@ -42,6 +50,7 @@ input[type="tel"] {
   border: 2px solid #000;
   border-radius: 5px;
   display: block;
+  margin: auto;
 }
 
 input[type="text"]:focus,
