--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -66,3 +66,23 @@
     touch-action: manipulation;
     will-change: transform;
 }
+
+.header__sign-out {
+    margin-right: 100px;
+    border: 2px solid transparent;
+    padding: 10px 30px;
+    border-radius: 10px;
+    font-size: 20px;
+    border: 2px solid #ff0000;
+    cursor: pointer;
+    background-color: #333;
+    color: #fff;
+}
+
+.header__sign-out:hover { 
+    background-color: #ff0000;
+    color: #333; transform:
+    scale(1);
+    color: #fff;
+    border: 2px solid #000000;
+}
