--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,51 +1,65 @@
 .login-container {
-    max-width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    text-align: center;
-  }
-  
-  .input-container {
-    margin-bottom: 20px;
-  }
-  
-  .login-input {
-    width: calc(100% - 20px);
-    margin-bottom: 10px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  .login-button {
-    width: calc(100% - 20px);
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .login-button:hover {
-    background-color: #0056b3;
-  }
-  
-  p {
-    font-size: 14px;
-    margin-top: 15px;
-  }
-  
-  p span {
-    color: #007bff;
-    cursor: pointer;
-  }
-  
-  p span:hover {
-    text-decoration: underline;
-  }
-  
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  text-align: center;
+  margin-top: 190px;
+  margin-bottom: 190px;
+}
+
+.input-container {
+  margin-bottom: 20px;
+}
+
+.login-input {
+  width: calc(100% - 20px);
+  margin-bottom: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 1rem;
+}
+
+.login-button {
+  width: 100%;
+  appearance: none;
+  border: 2px solid #000;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: normal;
+  padding: 7px 10px;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.login-button:hover {
+  background-color: #84909c;
+}
+
+p.login-text span {
+  color: #007bff;
+  font-size: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  margin-left: 10px;
+}
+
+p.login-text span:hover {
+  text-decoration: none;
+}
+
+.login-text {
+  font-size: 20px;
+  font-weight: 600;
+}
