--- a/src/components/Register/register.css
+++ b/src/components/Register/register.css
@@ -1,11 +1,13 @@
 .register-container {
-  max-width: 300px;
+  max-width: 600px;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
   text-align: center;
+  margin-top: 190px;
+  margin-bottom: 190px;
 }
 
 .register-input {
@@ -14,33 +16,50 @@
   padding: 8px;
   border: 1px solid #ccc;
   border-radius: 3px;
+  font-size: 1rem;
 }
 
 .register-button {
-  width: calc(100% - 20px);
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  background-color: #007bff;
-  color: #fff;
+  width: 100%;
+  appearance: none;
+  border: 2px solid #000;
+  box-sizing: border-box;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: normal;
+  padding: 7px 10px;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
 }
 
 .register-button:hover {
-  background-color: #0056b3;
+  background-color: #84909c;
 }
 
-p {
-  font-size: 14px;
-  margin-top: 15px;
+.register-text {
+  font-size: 20px;
+  font-weight: 600;
 }
 
-p span {
+.register-container2 {
+  margin-bottom: 20px;
+}
+
+p.register-text span {
   color: #007bff;
+  font-size: 20px;
   cursor: pointer;
+  text-decoration: none;
+  margin-left: 10px;
 }
 
-p span:hover {
-  text-decoration: underline;
+p.register-text span:hover {
+  text-decoration: none;
 }
